# siniko

./: .cursorrules  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  README.md  docker-compose.yml  sonar-project.properties
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema_rls.py  002_audit_logs_tenant_nullable.py  003_finance_statut_paiement.py  004_utilisateur_permissions.py  005_update_permissions.py  006_enseignants.py  007_platform_resilie_notification_emetteur.py  008_valeurs_systeme.py  009_renommage_etablissement.py  010_evaluation_par_cycle.py  011_matieres_enrichies.py  011_sequences_evaluation.py  20260522_0001_initial_schema.py  20260526_0002_add_users_roles_and_user_roles.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  logging.py  redis_client.py  security.py
backend/app/db/: __init__.py  base.py
backend/app/middleware/: audit.py  tenant.py
backend/app/models/: __init__.py  associations.py  auth.py  base.py  eleve.py  enseignant.py  enums.py  etablissement.py  finance.py  pedagogie.py  role.py  tenant.py  user.py
backend/app/routers/: auth.py  eleve.py  etablissement.py  finance.py  (+3 more)
backend/docs/: ARCHITECTURE_BACKEND.md
backend/tests/: conftest.py  permission_helpers.py  test_auth.py  test_eleve.py  test_etablissement.py  test_finance.py  test_health.py  test_models.py  test_pedagogie.py  test_permissions.py  test_platform.py  test_reporting.py
(+154 files in other folders)
